--- a/src/sections/Skills/SkillsStyles.module.css
+++ b/src/sections/Skills/SkillsStyles.module.css
@@ -17,7 +17,7 @@
 .skillList {
     display: flex;
     justify-content: space-evenly;
-    align-items: center;
+    align-self: center;
     flex-wrap: wrap;
     row-gap: 40px;
     max-width: 26ch;
@@ -29,4 +29,19 @@ hr {
     border: none;
     background-color: var(--text-color);
     margin: 30px auto;
+}
+
+@media (width >=800px) {
+    .skillList {
+        max-width: fit-content;
+        gap: 30px;
+
+        p {
+            font-size: 20px;
+        }
+    }
+
+    hr {
+        width: 300px;
+    }
 }
